--- a/src/PostProcess.ipynb
+++ b/src/PostProcess.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -67,13 +67,11 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>charge</th>\n",
-       "      <th>filename</th>\n",
        "      <th>i</th>\n",
        "      <th>i_norm</th>\n",
        "      <th>i_norm_ms1</th>\n",
        "      <th>ms1scan</th>\n",
        "      <th>mslevel</th>\n",
-       "      <th>original_path</th>\n",
        "      <th>precmz</th>\n",
        "      <th>query_index</th>\n",
        "      <th>rt</th>\n",
@@ -82,238 +80,142 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>J2315_SPE_48_TMP_P1-B-8_01_2657.mzML</td>\n",
-       "      <td>7355764.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>182</td>\n",
-       "      <td>2</td>\n",
-       "      <td>MSV000084945/ccms_peak/Dataset1_1/B.cenocepaci...</td>\n",
-       "      <td>291.144806</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.023750</td>\n",
-       "      <td>183</td>\n",
+       "      <th>count</th>\n",
+       "      <td>467.0</td>\n",
+       "      <td>4.670000e+02</td>\n",
+       "      <td>467.0</td>\n",
+       "      <td>467.0</td>\n",
+       "      <td>467.000000</td>\n",
+       "      <td>467.0</td>\n",
+       "      <td>467.000000</td>\n",
+       "      <td>467.0</td>\n",
+       "      <td>467.000000</td>\n",
+       "      <td>467.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>J2315_SPE_48_TMP_P1-B-8_01_2657.mzML</td>\n",
-       "      <td>401478.0</td>\n",
+       "      <th>mean</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.656272e+06</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>182</td>\n",
-       "      <td>2</td>\n",
-       "      <td>MSV000084945/ccms_peak/Dataset1_1/B.cenocepaci...</td>\n",
-       "      <td>500.216675</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.036850</td>\n",
-       "      <td>189</td>\n",
+       "      <td>1426.199143</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>415.154820</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.261891</td>\n",
+       "      <td>1428.944325</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>J2315_SPE_48_TMP_P1-B-8_01_2657.mzML</td>\n",
-       "      <td>8328318.0</td>\n",
+       "      <th>std</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.835694e+06</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1017.115777</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>141.398025</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.642111</td>\n",
+       "      <td>1017.102662</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.015000e+03</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>191</td>\n",
-       "      <td>2</td>\n",
-       "      <td>MSV000084945/ccms_peak/Dataset1_1/B.cenocepaci...</td>\n",
+       "      <td>182.000000</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>288.134491</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.020850</td>\n",
+       "      <td>183.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.703335e+05</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>605.000000</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>291.144928</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.047317</td>\n",
-       "      <td>192</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.135550</td>\n",
+       "      <td>612.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>J2315_SPE_48_TMP_P1-B-8_01_2657.mzML</td>\n",
-       "      <td>8142711.0</td>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.552210e+05</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>200</td>\n",
-       "      <td>2</td>\n",
-       "      <td>MSV000084945/ccms_peak/Dataset1_1/B.cenocepaci...</td>\n",
-       "      <td>291.145020</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.071000</td>\n",
-       "      <td>201</td>\n",
+       "      <td>1217.000000</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>291.145874</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.713250</td>\n",
+       "      <td>1219.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>J2315_SPE_48_TMP_P1-B-8_01_2657.mzML</td>\n",
-       "      <td>293049.0</td>\n",
+       "      <th>75%</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.773796e+06</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>218</td>\n",
-       "      <td>2</td>\n",
-       "      <td>MSV000084945/ccms_peak/Dataset1_1/B.cenocepaci...</td>\n",
-       "      <td>500.216675</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.130850</td>\n",
-       "      <td>225</td>\n",
+       "      <td>2112.500000</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>551.144714</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.037267</td>\n",
+       "      <td>2115.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>462</th>\n",
-       "      <td>0</td>\n",
-       "      <td>J2315_SPE_48_P1-B-4_01_2653.mzML</td>\n",
-       "      <td>9962262.0</td>\n",
+       "      <th>max</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.603391e+07</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1568</td>\n",
-       "      <td>2</td>\n",
-       "      <td>MSV000084945/ccms_peak/Dataset1_1/B.cenocepaci...</td>\n",
-       "      <td>689.434570</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4.625533</td>\n",
-       "      <td>1569</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>463</th>\n",
-       "      <td>0</td>\n",
-       "      <td>J2315_SPE_48_P1-B-4_01_2653.mzML</td>\n",
-       "      <td>640802.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3152</td>\n",
-       "      <td>2</td>\n",
-       "      <td>MSV000084945/ccms_peak/Dataset1_1/B.cenocepaci...</td>\n",
-       "      <td>472.290588</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8.732583</td>\n",
-       "      <td>3153</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>464</th>\n",
-       "      <td>0</td>\n",
-       "      <td>J2315_SPE_48_P1-B-4_01_2653.mzML</td>\n",
-       "      <td>8905959.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3269</td>\n",
-       "      <td>2</td>\n",
-       "      <td>MSV000084945/ccms_peak/Dataset1_1/B.cenocepaci...</td>\n",
-       "      <td>734.398193</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9.034417</td>\n",
-       "      <td>3270</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>465</th>\n",
-       "      <td>0</td>\n",
-       "      <td>J2315_SPE_48_P1-B-4_01_2653.mzML</td>\n",
-       "      <td>11038575.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3278</td>\n",
-       "      <td>2</td>\n",
-       "      <td>MSV000084945/ccms_peak/Dataset1_1/B.cenocepaci...</td>\n",
-       "      <td>734.398071</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9.057767</td>\n",
-       "      <td>3279</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>466</th>\n",
-       "      <td>0</td>\n",
-       "      <td>J2315_SPE_48_P1-B-4_01_2653.mzML</td>\n",
-       "      <td>9641337.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3287</td>\n",
-       "      <td>2</td>\n",
-       "      <td>MSV000084945/ccms_peak/Dataset1_1/B.cenocepaci...</td>\n",
-       "      <td>734.398193</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9.081167</td>\n",
-       "      <td>3288</td>\n",
+       "      <td>8282.000000</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>734.398438</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>22.115167</td>\n",
+       "      <td>8283.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>467 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     charge                              filename           i  i_norm  \\\n",
-       "0         0  J2315_SPE_48_TMP_P1-B-8_01_2657.mzML   7355764.0     1.0   \n",
-       "1         0  J2315_SPE_48_TMP_P1-B-8_01_2657.mzML    401478.0     1.0   \n",
-       "2         0  J2315_SPE_48_TMP_P1-B-8_01_2657.mzML   8328318.0     1.0   \n",
-       "3         0  J2315_SPE_48_TMP_P1-B-8_01_2657.mzML   8142711.0     1.0   \n",
-       "4         0  J2315_SPE_48_TMP_P1-B-8_01_2657.mzML    293049.0     1.0   \n",
-       "..      ...                                   ...         ...     ...   \n",
-       "462       0      J2315_SPE_48_P1-B-4_01_2653.mzML   9962262.0     1.0   \n",
-       "463       0      J2315_SPE_48_P1-B-4_01_2653.mzML    640802.0     1.0   \n",
-       "464       0      J2315_SPE_48_P1-B-4_01_2653.mzML   8905959.0     1.0   \n",
-       "465       0      J2315_SPE_48_P1-B-4_01_2653.mzML  11038575.0     1.0   \n",
-       "466       0      J2315_SPE_48_P1-B-4_01_2653.mzML   9641337.0     1.0   \n",
+       "       charge             i  i_norm  i_norm_ms1      ms1scan  mslevel  \\\n",
+       "count   467.0  4.670000e+02   467.0       467.0   467.000000    467.0   \n",
+       "mean      0.0  3.656272e+06     1.0         1.0  1426.199143      2.0   \n",
+       "std       0.0  5.835694e+06     0.0         0.0  1017.115777      0.0   \n",
+       "min       0.0  6.015000e+03     1.0         1.0   182.000000      2.0   \n",
+       "25%       0.0  1.703335e+05     1.0         1.0   605.000000      2.0   \n",
+       "50%       0.0  5.552210e+05     1.0         1.0  1217.000000      2.0   \n",
+       "75%       0.0  4.773796e+06     1.0         1.0  2112.500000      2.0   \n",
+       "max       0.0  2.603391e+07     1.0         1.0  8282.000000      2.0   \n",
        "\n",
-       "     i_norm_ms1  ms1scan  mslevel  \\\n",
-       "0           1.0      182        2   \n",
-       "1           1.0      182        2   \n",
-       "2           1.0      191        2   \n",
-       "3           1.0      200        2   \n",
-       "4           1.0      218        2   \n",
-       "..          ...      ...      ...   \n",
-       "462         1.0     1568        2   \n",
-       "463         1.0     3152        2   \n",
-       "464         1.0     3269        2   \n",
-       "465         1.0     3278        2   \n",
-       "466         1.0     3287        2   \n",
-       "\n",
-       "                                         original_path      precmz  \\\n",
-       "0    MSV000084945/ccms_peak/Dataset1_1/B.cenocepaci...  291.144806   \n",
-       "1    MSV000084945/ccms_peak/Dataset1_1/B.cenocepaci...  500.216675   \n",
-       "2    MSV000084945/ccms_peak/Dataset1_1/B.cenocepaci...  291.144928   \n",
-       "3    MSV000084945/ccms_peak/Dataset1_1/B.cenocepaci...  291.145020   \n",
-       "4    MSV000084945/ccms_peak/Dataset1_1/B.cenocepaci...  500.216675   \n",
-       "..                                                 ...         ...   \n",
-       "462  MSV000084945/ccms_peak/Dataset1_1/B.cenocepaci...  689.434570   \n",
-       "463  MSV000084945/ccms_peak/Dataset1_1/B.cenocepaci...  472.290588   \n",
-       "464  MSV000084945/ccms_peak/Dataset1_1/B.cenocepaci...  734.398193   \n",
-       "465  MSV000084945/ccms_peak/Dataset1_1/B.cenocepaci...  734.398071   \n",
-       "466  MSV000084945/ccms_peak/Dataset1_1/B.cenocepaci...  734.398193   \n",
-       "\n",
-       "     query_index        rt  scan  \n",
-       "0              0  1.023750   183  \n",
-       "1              0  1.036850   189  \n",
-       "2              0  1.047317   192  \n",
-       "3              0  1.071000   201  \n",
-       "4              0  1.130850   225  \n",
-       "..           ...       ...   ...  \n",
-       "462            0  4.625533  1569  \n",
-       "463            0  8.732583  3153  \n",
-       "464            0  9.034417  3270  \n",
-       "465            0  9.057767  3279  \n",
-       "466            0  9.081167  3288  \n",
-       "\n",
-       "[467 rows x 12 columns]"
+       "           precmz  query_index          rt         scan  \n",
+       "count  467.000000        467.0  467.000000   467.000000  \n",
+       "mean   415.154820          0.0    4.261891  1428.944325  \n",
+       "std    141.398025          0.0    2.642111  1017.102662  \n",
+       "min    288.134491          0.0    1.020850   183.000000  \n",
+       "25%    291.144928          0.0    2.135550   612.500000  \n",
+       "50%    291.145874          0.0    3.713250  1219.000000  \n",
+       "75%    551.144714          0.0    6.037267  2115.500000  \n",
+       "max    734.398438          0.0   22.115167  8283.000000  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "msqlresults_df"
+    "msqlresults_df.describe()"
    ]
   },
   {
